--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,282 @@
-:root{
-    --headingcolor:red
+ 
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,900&display=swap');
+ 
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
 }
+.mainprofilt{
+    background-color: #181b1e;
+}
+.mainprofiltcontent{
+    font-size: 15px;
+    font-weight: 700;
+    color: #fcfcfc;
+}
+.mainprofiltcontentlink{
+    color: #fcfcfc;
+    font-size: 18px !important;
+    font-weight: 700;
+}
+.profitarrow{
+    font-size: 12px !important;
+}
+.mainhomebanner{
+    background-image: url('../img/leperbannerimg.jpeg');
+    width: 100%;
+  
+    height: 100vh;
+    object-fit: cover;
+    background-repeat: no-repeat;
+   
+}
+
+.homebannerheadig h1{
+
+    font-size:55px  !important;
+    color: #f5f6f8;
+    font-weight: 700 !important;
+}
+.homebannerbtn1 {
+    width: 100%;
+    border: 1px solid white;
+    color: white;
+    font-weight: 500;
+    background-color: transparent;
+    border-radius: 30px;
+     transition: 1s;
+
+}
+.homebannerbtn1:hover{
+   
+       background-image: linear-gradient(to right, #ffffff00 0%, #ffffff50 51%, #ffffff30 100%);
+    
+}
+
+.homebannerbtn2{
+    width: 100%;
+    border: 1px solid black;
+    color: #5f6265;
+    font-weight: 500;
+    background-color: white;
+    border-radius: 30px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+
+}
+.homebannerbtn2:hover{
+    transition: 0.5s;
+    background-color: #f5f6f8;
+        box-shadow: rgba(204, 219, 232, 0.457) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.12) -3px -3px 6px 1px inset;
+}
+
+.logoimage img{
+    width: 180px;
+
+}
+
+.mainnavbarset ul li{
+    color: #525456;
+    font-weight: 600;
+    font-size: 18px;
+}
+.incriptionbtn{
+    background-color: #e50054;
+    color: white;
+      font-size: 18px;
+      padding-left: 30px;
+      padding-right: 30px;
+      font-weight: 500;
+
+}
+
+.incriptionbtn:hover{
+    background-color: #e50054;
+    color: white;
+      font-size: 18px;
+      padding-left: 30px;
+      padding-right: 30px;
+      font-weight: 500;
+
+}
+.incriptionbtnfirst{
+
+    color: #8d8f90;
+    font-weight: 500;
+    font-size: 18px;
+    border-radius: 30px;
+    border: 1px solid black;
+
+}
+.incriptionbtnfirst:hover{
+
+    color: #8d8f90;
+    font-weight: 500;
+    font-size: 18px;
+    border-radius: 30px;
+    border: 1px solid black;
+
+}
+
+
+
+/* ##############>Login Style Start <######### */
+.lognsieimage{
+    background-image:url('../img/Loginside.jpeg');
+    width: 100%;
+    object-fit:  cover;
+   background-repeat: no-repeat;
+    height: 100vh;
+   
+   
+}
+
+.loginsidecontelogo{
+    position: absolute;
+    left: 23%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+
+    filter: brightness(0) invert(1);
+}
+
+.loginseconfsection{
+    background-color: #fdfdff;
+    height: 100vh;
+    overflow-y: scroll;
+}
+.logoimagelogin img{
+    width: 250px;
+
+
+}
+
+
+.logincomtent p{
+    font-size: 20px;
+
+}
+
+.loginiputseccting input{
+    padding-top: 13px !important;
+    padding-bottom: 13px !important;
+   
+}
+.loginiputseccting label{
+    font-weight: 500;
+    color: #181b1e;
+    padding-bottom: 10px;
+}
+.loginiputseccting input::placeholder{
+    color: #a2acba;
+    font-weight: 600;
+}
+
+.loginlinks a{
+    text-decoration: none;
+font-size: 14px;
+color: black; 
+
+}
+
+.submiybuttonlogin{
+    border-radius: 30px;
+    background-color: #e50054;
+    color: white;
+    font-weight: 600;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+}
+.submiybuttonlogin:hover{
+    border-radius: 30px;
+    background-color: #e50054;
+    color: white;
+    font-weight: 600;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+}
+.lineor{
+    width: 100%;
+    height: 1px ;
+    background-color: #f2f3f6;
+    margin-top: 10px;
+}
+.loginwidthgoogle button{
+    border: 1px solid #dadce0; 
+    font-size: 14px;
+    color: #3c4043;
+
+}
+.loginwidthgoogle img{
+    width: 20px !important;
+}
+
+
+.linkalllogin a{
+    color: black;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.Inscriptionset{    color: black;
+    /* text-decoration: none; */
+    font-weight: 800;
+    font-size: 14px;
+}
+
+
+
+.eye-icon {
+  position: absolute;
+  width: 17px;
+  right: 10px;
+  top: 15px;
+}
+.registerAcc{
+  text-decoration: none !important;
+}
+.eye-icon:hover{
+  cursor: pointer;
+}
+
+
+@media(min-width:1400px)
+{
+    .lognsieimage{
+    background-image:url('../img/Loginside.jpeg');
+    width: 100%;
+    object-fit:  cover;
+   background-repeat: no-repeat;
+    height: 100vh;
+    background-size: 100%;
+   
+   
+}
+}
+@media(max-width:768px)
+{
+    .loginsidecontelogo{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+
+
+.submiybuttonlogin{
+   width: 100%;
+
+
+}
+
+
+.loginseconfsection{
+    background-color: #fdfdff;
+    height: 100%;
+    overflow-y: scroll;
+}
+ 
+}
+/* ##############>Login Style End<######### */
+ 
