--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
 :root{
     --headingcolor:red
 }
+.heading h2{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+.card{
+  padding-top: 50px;
+}
+
